<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cartItem"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/name_product"
                android:textColor="@color/blackForText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/cartMinus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/brown"
                android:src="@drawable/ic_minus"
                app:layout_constraintBottom_toBottomOf="@+id/textView19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/menu_elem_counter"
                android:textColor="@color/brown"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cartMinus"
                app:layout_constraintEnd_toStartOf="@+id/cartMinus"
                app:layout_constraintTop_toTopOf="@+id/cartMinus" />

            <ImageButton
                android:id="@+id/cartPlus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/brown"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="@+id/cartMinus"
                app:layout_constraintEnd_toStartOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/cartMinus" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/syrop"
                android:textColor="@color/blackForText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/cost_with_dvoetochie"
                android:textColor="@color/blackForText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21" />

            <TextView
                android:id="@+id/costCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/final_cart_cost"
                android:textColor="@color/blackForText"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView22"
                app:layout_constraintStart_toEndOf="@+id/textView22"
                app:layout_constraintTop_toTopOf="@+id/textView22" />

            <TextView
                android:id="@+id/syropCartItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/witpout_syrop"
                android:textColor="@color/blackForText"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintStart_toEndOf="@+id/textView21" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>